# desafio-compra-venda-acoes

./: .gitignore  .http  Cargo.toml  README.md  database.db  diesel.toml  tutorial.txt
migrations/2025-01-24-235151_create_users/: up.sql
migrations/2025-01-26-222815_add_verifiy_code_column/: down.sql  up.sql
migrations/2025-01-27-134645_create_email_verification_table/: down.sql  up.sql
migrations/2025-01-27-145553_create_bank_table/: down.sql  up.sql
src/: lib.rs  main.rs  routes.rs  schema.rs
src/handlers/: hello.rs  mod.rs  stocks_handler.rs  users_handler.rs
src/middlewares/: auth_middleware.rs  mod.rs
src/models/: mod.rs  token_mail.rs  users.rs
src/services/: mod.rs  users_service.rs
src/utils/: custom_error.rs  custom_validations.rs  jwt_token.rs  mod.rs  token_mail.rs
