[package]
name = "compra-venda-acoes"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.9.0", features = ["macros"] }
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = ["chrono", "r2d2", "sqlite"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
