[package]
name = "compra-venda-acoes"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-service = "2.0.2"
actix-web = { version = "4.9.0", features = ["macros"] }
anyhow = "1.0.95"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = ["chrono", "r2d2", "sqlite"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
log = "0.4.25"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
uuid = "1.12.1"
zxcvbn = "3.1.0"
